--- a/styles/style.css
+++ b/styles/style.css
@@ -82,6 +82,11 @@ nav ul a{
 
 }
 
+/* main */
+main{
+    max-width: 1440px;
+}
+
 /* sponsor style */
 
 .sponsor-img-container{
@@ -89,6 +94,52 @@ nav ul a{
     justify-content: space-evenly;
     gap: 60px;
     margin: 100px 165px;
+}
+
+/* popular collection style */
+
+.popular-collection{
+    margin: 100px 169px;
+}
+
+.popular-title{
+    text-align: center;
+    color: #3A3A3A;
+    font-size: 1.75rem;
+    font-weight: 600;
+    margin-top: 100px;
+    margin-bottom: 30px;
+}
+
+.popular-collection-container{
+    display: grid;
+    grid-template-columns: repeat(3 , 1fr);
+    gap: 30px;
+}
+
+.Product-container{
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+    padding: 17px 14px;
+}
+
+.product-title{
+    color: #18191F;
+    font-size: 1.7rem;
+    font-weight: 500;
+}
+
+.product-price{
+    color:  rgba(0, 0, 0, 0.87);
+    font-size: 1.25rem;
+    font-family: 400;
+}
+
+.product-description{
+    color: #787885;
+    font-size: .75rem;
+    font-family: 700;
 }
 
 /* responsive section */
